conteúdo da aula de CSS

--- a/aula04/index.html
+++ b/aula04/index.html
@@ -9,8 +9,17 @@
 </head>
 <body>
 	<div>
-		<h1>Paragrafo 1</h1>
-		<p>Teste teste</p>
-	</div>
+		<h1 id="title1">Paragrafo 1</h1>
+    <p id="paragrafo1">Teste teste</p>
+    <p>oi tudo bem?</p> 
+  </div>
+  <div class="alerta">
+    <h1>Paragrafo 2</h1>
+		<p id="p2">este é um outro parágrafo</p>
+  </div> 
+  <div class="alerta">
+  <h1>Paragrafo 3 </h1>
+  <p id="p3">este é mais um parágrafo</p>
+</div>
 </body>
 </html>
